Added preview image

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,9 @@
       content="Test your sexual literacy with the latest Wordle-inspired daily web game!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>A Sexplanation: The Game</title>
+    <link rel="image_src" href="%PUBLIC_URL%/preview.png" />
+    <title>Genitle: An A Sexplanation Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
