Added Twitter tracking

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="image_src" href="%PUBLIC_URL%/preview.png" />
-    <title>Genitle: An A Sexplanation Game</title>
+    <title>GENITLE: An A Sexplanation Game</title>
 
     <!-- Meta Pixel Code -->
     <script>
@@ -50,6 +50,35 @@
         src="https://www.facebook.com/tr?id=527764818926520&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
+
+    <!-- Twitter single-event website tag code -->
+    <script
+      src="//static.ads-twitter.com/oct.js"
+      type="text/javascript"
+    ></script>
+    <script type="text/javascript">
+      twttr.conversion.trackPid("o8p5f", {
+        tw_sale_amount: 0,
+        tw_order_quantity: 0,
+      });
+    </script>
+    <noscript>
+      <img
+        height="1"
+        width="1"
+        style="display: none"
+        alt=""
+        src="https://analytics.twitter.com/i/adsct?txn_id=o8p5f&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0"
+      />
+      <img
+        height="1"
+        width="1"
+        style="display: none"
+        alt=""
+        src="//t.co/i/adsct?txn_id=o8p5f&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0"
+      />
+    </noscript>
+    <!-- End Twitter single-event website tag code -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
