Added privacy policy and cookie consent banner

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,13 @@
     <link rel="image_src" href="%PUBLIC_URL%/preview.png" />
     <title>GENITLE: An A Sexplanation Game</title>
 
+    <script
+      type="text/javascript"
+      src="https://app.termly.io/embed.min.js"
+      data-auto-block="on"
+      data-website-uuid="32d7a78d-a550-447a-a5bb-b7b50a1902f0"
+    ></script>
+
     <!-- Meta Pixel Code -->
     <script>
       !(function (f, b, e, v, n, t, s) {
