--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,15 @@
     <link rel="image_src" href="%PUBLIC_URL%/preview.png" />
     <title>GENITLE: An A Sexplanation Game</title>
 
+    <meta property="og:url" content="https://genitle.herraproductions.com" />
+    <meta property="og:title" content="GENITLE: An A Sexplanation Game" />
+    <meta
+      property="og:description"
+      content="Test your sexual literacy with the latest Wordle-inspired daily web game!"
+    />
+    <meta property="og:site_name" content="GENITLE" />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+
     <script
       type="text/javascript"
       src="https://app.termly.io/embed.min.js"
