added twitter tags

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     <link rel="image_src" href="%PUBLIC_URL%/preview.png" />
     <title>GENITLE: An A Sexplanation Game</title>
 
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@ASexplanation" />
+    <meta name="twitter:creator" content="@theAbeTrain" />
+
     <meta property="og:url" content="https://genitle.herraproductions.com" />
     <meta property="og:title" content="GENITLE: An A Sexplanation Game" />
     <meta
