--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <title>GENITLE: An A Sexplanation Game</title>
 
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/preview.png" />
     <meta name="twitter:site" content="@ASexplanation" />
     <meta name="twitter:creator" content="@theAbeTrain" />
 
