Tried to fix image again

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
     <title>GENITLE: An A Sexplanation Game</title>
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/preview.png" />
+    <meta
+      name="twitter:image"
+      content="https://genitle.herraproductions.com/preview.png"
+    />
     <meta name="twitter:site" content="@ASexplanation" />
     <meta name="twitter:creator" content="@theAbeTrain" />
 
